# merlin

./: .gitignore  README.md  TODO.md  constant.go  errors.go  go.mod  go.sum  rand.go  rand_benchmark_test.go  rand_example_test.go  rand_test.go  transcript.go  transcript_benchmark_test.go  transcript_example_test.go  transcript_test.go
.github/workflows/: build.yml
cmd/testbot-rs/: Cargo.toml
cmd/testbot-rs/src/: lib.rs
testdata/: rand.json  transcripts.json
