[package]
name = "testbot"
version = "0.1.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64      = "0.13.0"
rand        = "0.7.3"
serde_json  = "1.0.59"

[dependencies.merlin]
git = "https://github.com/dalek-cryptography/merlin"
rev = "2.0.0"

[dependencies.serde]
features = ["derive"]
version  = "1.0.116"
